# pipelinescope

./: README.md  pyproject.toml
.github/workflows/: tests.yml
examples/complex_graph/: .pipelinescope.yaml  logging.yaml  main.py  pipeline.py
examples/nested_calls/: .pipelinescope.yaml  main.py  pipeline.py
examples/simple_linear/: .pipelinescope.yaml  main.py  pipeline.py
pipelinescope/: __init__.py
pipelinescope/cli/: __init__.py  diff.py
pipelinescope/core/: __init__.py  config.py  entrypoint.py  extrapolation.py  profiler.py  resource_monitor.py  stats.py
pipelinescope/data/: __init__.py  serializer.py
pipelinescope/prompts/: __init__.py  llm_optimize.py
pipelinescope/reporting/: __init__.py  analyzer.py  generator.py
pipelinescope/reporting/templates/: summary.html
pipelinescope/utils/: __init__.py  logger.py
tests/: conftest.py  test_analyzer.py  test_config.py  test_diff.py  test_entrypoint.py  test_extrapolation.py  test_generator.py  test_logger.py  test_profiler.py  test_resource_monitor.py  test_serializer.py  test_stats.py
