[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pipelinescope"
version = "0.1.0"
description = "Simple, production-ready Python profiling for data pipelines"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SherozShaikh", email = "shaikh.sheroz07@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
keywords = ["profiling", "performance", "pipeline", "optimization", "bottleneck"]

dependencies = [
    "psutil>=5.8.0",
    "GPUtil>=1.4.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "py-logex-enhanced>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/sherozshaikh/pipelinescope"
Documentation = "https://github.com/sherozshaikh/pipelinescope#readme"
Repository = "https://github.com/sherozshaikh/pipelinescope"
Issues = "https://github.com/sherozshaikh/pipelinescope/issues"

[project.scripts]
psdiff = "pipelinescope.cli.diff:main"

[tool.setuptools]
packages = ["pipelinescope", "pipelinescope.core", "pipelinescope.reporting", "pipelinescope.cli", "pipelinescope.data", "pipelinescope.prompts", "pipelinescope.utils"]

[tool.setuptools.package-data]
pipelinescope = ["reporting/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"
